gcc/testsuite/g++.old-deja/g++.robertl/eb128.C
// { dg-do assemble  }
template<class T>
struct A {
  typedef T* iterator; // { dg-error "" } pointer to reference
public:
  A(){}
};

void f()
{
  A<int&> a;
}
